--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -87,7 +87,16 @@ h4 {
 }
 
 .container {
-  margin: 90px 0 68px 0;
+  margin: 0 auto;
+  max-width: 610px;
+  width: 100%;
+
+  
+}
+@media screen and (max-width:767px){
+  .container{
+    max-width: 80%;
+  }
 }
 
 @media screen and (max-width: 584px) {
