--- a/src/styles/components/InstagramFeed.scss
+++ b/src/styles/components/InstagramFeed.scss
@@ -8,7 +8,7 @@
     margin-top: 4em;
     a{
       max-height: 200px;
-      transition: 3s all;
+      transition: .3s all;
       display: block;
       &:hover{
         opacity: .6;
