--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -1,65 +1,71 @@
-@import '../variables';
+@import "../variables";
 
-header{
+header {
   position: absolute;
   top: 0;
   left: 0;
   z-index: 100;
-  box-shadow: 0px 50px 50px 0px rgba(0,0,0,0.6) inset;
+  box-shadow: 0px 50px 50px 0px rgba(0, 0, 0, 0.6) inset;
   width: 100%;
-  padding: .25em 0;
-  .header-container{
+  padding: 0.25em 0;
+  .header-container {
     max-width: 1100px;
     margin: auto;
     display: flex;
     justify-content: space-between;
     padding: 0 1.5em;
-    .header-col{
-      &:first-child{
+    .header-col {
+      &:first-child {
         width: 25%;
-        img{
+        img {
           max-width: 100px;
         }
       }
-      &:nth-child(2){
+      &:nth-child(2) {
         display: flex;
         flex: 1;
         width: 50%;
         justify-content: center;
         align-items: center;
-        a{
+        a {
           padding: 0 1em;
-          border-left: 1px solid rgba(255, 255, 255, .4);
+          border-left: 1px solid rgba(255, 255, 255, 0.4);
           height: fit-content;
           color: white;
           text-transform: uppercase;
           font-weight: 500;
           letter-spacing: 1px;
           font-size: 14px;
-          img{
+          img {
             filter: invert(1);
             max-width: 40px;
-            margin-bottom: .25em;
+            margin-bottom: 0.25em;
             margin: auto;
             display: block;
           }
-          &:first-child{
+          &:first-child {
             border: 0;
           }
-          &:hover{
+          &:hover img {
             animation-name: bounce;
             animation-timing-function: ease;
             animation-duration: 2s;
-            animation-iteration-count: infinite
+            animation-iteration-count: infinite;
+          }
+          &:last-child {
+            img {
+              max-width: 35px;
+              max-height: 45px;
+            }
           }
         }
       }
-      &:nth-child(3){
+      &:nth-child(3) {
         display: flex;
         padding-top: 1em;
         width: 25%;
         justify-content: flex-end;
-        a{
+        a {
           color: white;
           text-transform: uppercase;
           font-weight: 500;
@@ -67,23 +73,23 @@ header{
           font-size: 12px;
           padding: 0 1em;
           height: fit-content;
-          &:first-child{
-            border-right: 1px solid rgba(255, 255, 255, .4);
-            &::after{
-              content: '>';
+          &:first-child {
+            border-right: 1px solid rgba(255, 255, 255, 0.4);
+            &::after {
+              content: ">";
               transform: rotate(90deg);
               display: inline-block;
-              margin-left: .25em;
+              margin-left: 0.25em;
               font-weight: 800;
             }
           }
         }
       }
-      &:nth-child(4){
+      &:nth-child(4) {
         display: none;
         align-items: center;
         justify-content: flex-end;
-        svg{
+        svg {
           color: #fff;
           cursor: pointer;
         }
@@ -93,20 +99,29 @@ header{
 }
 
 @keyframes bounce {
-  0%   { transform: translateY(0); }
-  30%  { transform: translateY(-5px); }
-  50%  { transform: translateY(0); }
-  100% { transform: translateY(0); }
+  0% {
+    transform: translateY(0);
+  }
+  30% {
+    transform: translateY(-5px);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
-@media screen and (max-width: 948px){
-  header{
-    .header-container{
-      .header-col{
-        &:nth-child(2), &:nth-child(3){
+@media screen and (max-width: 948px) {
+  header {
+    .header-container {
+      .header-col {
+        &:nth-child(2),
+        &:nth-child(3) {
           display: none;
         }
-        &:nth-child(4){
+        &:nth-child(4) {
           display: flex;
         }
       }
