feat: Integration of social media icons in footer.

--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -42,6 +42,20 @@ footer {
           
         }
       }
+      .footer-socials{
+        display: flex;
+        p{
+          font-size: 11px;
+        }
+        a{
+          color: black;
+          margin-left: .8em;
+          svg{
+            width: 18px;
+            height: 18px;
+          }
+        }
+      }
     }
   }
   .footer-copyright {
